--- a/regexp.html
+++ b/regexp.html
@@ -78,7 +78,12 @@
           // 是否为youtube地址
 					var isYoutube = /(?:www\.)?youtube.com\/watch\?(?=.*v=-{0,1}\w+)(?:\S+)?$/.test("https://www.youtube.com/watch?v=iI0U7_LzGlY");
           // 是否包含字母、数字、_外其他特殊字符
-					var hasSpecialChar = /ad/.test("a");
+          var hasSpecialChar = /[(\ )(\~)(\!)(\@)(\#)(\$)(\%)(\^)(\&)(\*)(\()(\))(\-)(\_)(\+)(\=)(\[)(\])(\{)(\})(\|)(\\)(\;)(\:)(\')(\")(\,)(\.)(\/)(\<)(\>)(\?)(\)]+/.test("a");
+          
+          //过滤特殊字符
+          // var str1 = str.replace(/[\'\"\\\/\b\f\n\r\t]/g, '');// 去掉转义字符
+          // var str2= str.replace(/[\-\_\,\!\|\~\`\(\)\#\$\%\^\&\*\{\}\:\;\"\L\<\>\?]/g, '');// 去掉特殊字符
+          // return str2;
         </script>
 
     </body>
