feat: update feoptimization

--- a/my_books/fe-optimization.html
+++ b/my_books/fe-optimization.html
@@ -135,11 +135,142 @@
       <div>定位大模块、删除无用模块、生产模式公共模块抽离、开发模式DLL & DllReference优化；</div>
       <div><a href="https://segmentfault.com/a/1190000019404454" target="_blank">webpack-打包优化</a></div>
 
-      <h4></h4>
-      <div></div>
-      <a href="" target="_blank"></a>
-
       <h3>2）页面渲染架构设计：</h3>
+
+      <h4>18浏览器渲染过程</h4>
+      <div>浏览器渲染过程， 缺少了CDN解析、HTTP握手相关；<a href="https://blog.csdn.net/weixin_42069147/article/details/105599327" target="_blank">浏览器渲染原理和过程</a></div>
+      <div>浏览器解析HTML，生成DOM树；</div>
+      <div>浏览器解析CSS，生成CSSOM（CSS Object Model）树；</div>
+      <div>JS 会通过DOM API（DOM）和 CSSOM API 操作 DOM 树和 CSS Rule 树， 浏览器将DOM树和 CSSOM树 合成渲染树（Render Tree）；</div>
+      <div>布局（Layout）: 根据生成的Render Tree进行回流 计算每个节点的几何信息；（位置、大小、字体样式等）</div>
+      <div>绘制（painting）: 根据渲染树和回流得到几何信息，得到每个节点绝对像素；</div>
+      <div>展示（display）: 将像素发给图形处理器GPU， 展示在页面上；</div>
+
+      <h4>19页面渲染技术架构</h4>
+      <div>服务端渲染： 后端同步渲染、同构直出、BigPipe</div>
+      <div>
+        <span>客户端渲染：</span>
+        <ul>
+          <li>1）JavaScript渲染，静态化，前后端分离、单页面应用；</li>
+          <li>2）Web APP: Angular, React, Vue 等 PWA</li>
+          <li>3）原生APP： Android, IOS</li>
+          <li>4）Hybrid APP: phoneGap, AppCan 等</li>
+          <li>5）跨平台应用: Weex, React Native, Flutter, 小程序等</li>
+        </ul>
+      </div>
+      
+      <h4>20后端同步渲染</h4>
+      <div>JSP，PHP， ASP 步骤差不多，以JSP为例</div>
+      <div>
+        <ul>
+          <li>步骤1：JSP Servlet映射以.jsp结尾URL，JSP 文件请求时， Servlet容器知道调用哪个Servlet</li>
+          <li>步骤2：Servlet 容器检查 Servlet 是否已被编译</li>
+          <li>步骤3：如未编译， 容器将JSP代码转换成Servlet代码，进行编译</li>
+          <li>步骤4：Servlet容器将 JSP 请求转发到编译完成的 JSP Servlet类</li>
+          <li>步骤5：JSP Servlet类 返回并发送给客户端浏览器对应HTML</li>
+        </ul>
+      </div>
+      <div>优点：快速实现业务开发、上线（协作模板引擎：JSmart, Velocity.js）； 缺点：用户需等待HTML完全加载才看到页面（白屏问题），代码耦合严重，前端页面复杂时不方便更新、迭代；</div>
+
+      <h4>21动态页做页面静态化</h4>
+      <div>静态化是指动态化网站生成静态HTML页面供用户、搜索引擎更好访问的技术，分成纯静态化和伪静态化两种</div>
+      <div>优势：</div>
+      <div>
+        <ul>
+          <li>1）提高访问速度</li>
+          <li>2）有利于SEO，搜索引擎更容易收录</li>
+          <li>3）更稳定，后端出问题后，因为静态页有缓存不影响用户访问</li>
+        </ul>
+      </div>
+      <div>劣势：</div>
+      <div>
+        <ul>
+          <li>占用服务器硬盘空间</li>
+          <li>静态页更新可能产生死链</li>
+        </ul>
+      </div>
+
+      <h4>22实现前后端分离</h4>
+      <div>定义：前后端人员分离，技术栈分离； 后端负责业务功能、提供数据接口，前端负责页面UI、交互逻辑等；</div>
+      <div>优势：团队更加专注、提升开发效率、增加代码可维护性</div>
+      <div>后端架构：JAVA 、PHP + nginx,使用微服务（dubbo）, 使用某种协议例如JSF 提供不同服务； 前端架构： Angular,React,Vue等前端框架编译后部署 CDN 或 Node Server；</div>
+      <div>劣势：前端工作量较多，重前端，需要前端人员较多； 不利于SEO；</div>
+
+      <h4>23单页面应用场景</h4>
+      <div>定义： SPA（single-page-Application）, 页面切换浏览器不重新加载，而是通过动态重写当前页；</div>
+      <div>优点：</div>
+      <div>
+        <ul>
+          <li>1）页面切换、交互加载速度快；</li>
+          <li>2）良好交互体验；</li>
+          <li>3）前后端职责分离；</li>
+          <li>4）减轻服务器负载；</li>
+        </ul>
+      </div>
+      <div>缺点：</div>
+      <div>
+        <ul>
+          <li>1）开发成本高</li>
+          <li>2）首次加载时间长</li>
+          <li>3）对SEO不友好 </li>
+        </ul>
+      </div>
+
+      <h4>24BigPipe</h4>
+      <div>定义：页面加载到 pagelet, 加快页面渲染速度。将整个页面拆解成N个 pagelet，各自渲染优化用户体验；</div>
+      <div>技术实现：</div>
+      <div>
+        <ul>
+          <li>浏览器向服务器请求页面</li>
+          <li>Server 快速返回 pagelet 容器（空DIV）， 与浏览器HTTP保持连接状态</li>
+          <li>浏览器分别下载 pageliet，渲染页面</li>
+          <li>所有 pageliet 下发完成， 发送 已完成标识位</li>
+          <li>浏览器注入HTML，小部分CSS</li>
+          <li>接收完所有页面后加载外部 JavaScript</li>
+          <li>浏览器执行所有内联 JavaScript</li>
+        </ul>
+      </div>
+
+      <h4>25同构直出选择</h4>
+      <div>同构定义：一套代码既可以在服务端运行，又可以在客户端运行；</div>
+      <div>优势：</div>
+      <div>
+        <ul>
+          <li>降低首屏渲染时间</li>
+          <li>有理于SEO，爬虫喜欢DOM结构页面</li>
+          <li>规避白屏</li>
+          <li>代码同构： 上线两版本，利于灾备</li>
+        </ul>
+      </div>
+      <div>实现： next.js, gatsbjs, nuxt.js; express, koa2, egg等；</div>
+
+      <h4>26PWA</h4>
+      <div>定义： Progressive Web App 简称 PWA， 使用特定技术和标准模式开发的Web应用；</div>
+      <div>优势：</div>
+      <div>
+        <ul>
+          <li>消除Web对网络的依赖，媲美设备原生APP，优化用户体验</li>
+          <li>缓存资源，秒开页面</li>
+          <li>内容可被搜索引擎收录</li>
+          <li>可给用户发送离线消息</li>
+        </ul>
+      </div>
+      <div>实现， 全站改成Https,Service Worker, App Manifest. 浏览器核心API： ServiceWorkerGlobalScope（浏览器支持率：88%）， Web App Manifest(浏览器支持率：83%)</div>
+
+      <h4>27页面渲染：技术方案选择</h4>
+      <div>1）存在即合理， 旧项目有历史原因，不可大改； </div>
+      <div>2）依赖业务形式； </div>
+      <div>3）依赖团队规模； </div>
+      <div>4）依赖技术水平；</div>
+      <div>5）没有银弹。</div>
+
+      <h4>28页面加载：加载策略</h4>
+      <div>懒加载：延迟加载特定元素：图片、JS/CSS、JS特定函数； 实现思路： 监听滚动条，如懒加载元素(有data-lazy属性) 且可见，其 src 由空变成真实值。</div>
+      <div>预加载：让浏览器预先加载某些资源，如图片、JS/CSS/模板，这些资源将来才使用； 例如： 一级页面预先加载二级页面资源，加快二级页面打开速度；实现：preload, prefetch, preconnect。</div>
+      <div>预渲染：大型项目，提前加载后续组件；</div>
+      <div>按需加载：常规按需加载（原生JS，JQuery），不同APP按需加载（判断是否在微信APP觉得是否加载对应JS-SDK脚本）， 不同设备按需加载（PC端和H5端样式文件），不同分辨率按需加载（<a href="https://www.runoob.com/cssref/css3-pr-mediaquery.html" target="_blank">CSS Media Query</a>）</div>
+      <div>楼层式加载： 楼层页加载、缓存对应数据；</div>
+
     </div>
   </body>
 </html>
