feat: update utils fn

--- a/my_books/fe-optimization.html
+++ b/my_books/fe-optimization.html
@@ -29,6 +29,7 @@
     <div class="main markdown">
       <h1>《前端性能优化链路》 学习</h1>
       <a href="https://time.geekbang.org/course/intro/257" target="_blank">极客时间地址</a>
+      <a href="https://mark.show/" target="_blank">MarkShow - 在线PPT，复制 feOptimization 内容</a>
       
       <h2>章节</h2>
       <ul>
@@ -85,7 +86,7 @@
       <h4>08JS 执行优化</h4>
       <div>requestAnimationFrame 取代 setTimeout, setInterval,考虑兼容性，该API支持情况：(IE 10+)</div>
       <div>压缩JS代码</div>
-      <div><a href="https://zhuanlan.zhihu.com/p/38313717" target="_blank"></a>节流、防抖函数</div>
+      <div><a href="https://zhuanlan.zhihu.com/p/38313717" target="_blank">节流、防抖函数</a></div>
       <div>使用CSS动画替代JS动画、数量庞大的表格等使用Canvas画板</div>
 
       <h4>09JS 缓存优化</h4>
