feat: 更新周刊笔记

--- a/my_books/nodejs.html
+++ b/my_books/nodejs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1" />
     <meta charset="utf-8" />
     <title>
-      个人学习笔记
+      《深入浅出Node》 学习笔记
     </title>
     <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../markdown.css" />
@@ -16,22 +16,20 @@
       a {
         color: #cb9c64;
       }
+      .normal-img {
+        width: 100%;
+        height: auto;
+      }
+      .txt {
+        margin-left: 20px;
+      }
     </style>
   </head>
   <body>
     <div class="main markdown">
-      <h1>个人书单学习笔记</h1>
-      <ul>
-        <li>
-          <a href="./css_world.html" >《CSS世界》学习</a>
-        </li>
-        <li>
-          <a href="./nodejs.html" >《深入浅出Node》学习</a>
-        </li>
-        <li>
-          <a href="./fe-optimization.html" >《前端性能优化链路》学习</a>
-        </li>
-      </ul>
+      <h1>《深入浅出Node》 学习</h1>
+      <a href="https://weread.qq.com/web/reader/d1b32290718ff65fd1befcc" target="_blank">微信读书</a>
+
     </div>
   </body>
 </html>
